# lung-nematic

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Lung_Nematic_Modular_Colab.ipynb  Notebook_Lung_Nematic_Analisys.ipynb  README.md  cli.py  defect_labelling_colab.ipynb  fibrofocus_colab.ipynb  ipf_simulation_colab.ipynb  lung_nematic_colab.ipynb  metadata_template.csv  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
config/: default_config.json
lung_nematic/: __init__.py  _compat.py  adaptive_radius.py  batch.py  cli.py  collagen_field.py  colocalization.py  config.py  defect_classifier.py  defect_features.py  defect_maps.py  defects.py  defects_adaptive.py  fused_field.py  io_utils.py  labeling.py  metrics.py  morphometry.py  nematic.py  nhlf_stiffness_analysis.py  null_model.py  phase_contrast.py  pipeline.py  preprocessing.py  segmentation.py  synthetic.py  visualization.py
lung_nematic/data/: __init__.py  default_config.json
simulations/: README.md  __init__.py  coupled_analysis.py  mesenchyme.py  model.py  nematic_resolution.py  pharmacology.py  render.py
simulations/alveolar/: README.md  __init__.py  defect_tracking.py  geometry.py  model.py  render.py
simulations/configs/: two_year_progressive.json
simulations/fibrofocus/: __init__.py  bistability.py  model.py  render.py
tests/: test_adaptive_radius.py  test_defect_classifier.py  test_defects_adaptive.py  test_focus_boundary.py  test_morphometry.py  test_phase_contrast.py  test_pipeline.py  test_regressions.py  test_smoke.py  test_synthetic_defects.py
