[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lung-nematic"
version = "0.2.0"
description = "Nematic field and topological defect analysis for lung histology"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-image>=0.22",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pillow>=10.0",
    "tqdm>=4.66",
]

[project.scripts]
lung-nematic = "lung_nematic.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lung_nematic*", "simulations*"]

[tool.setuptools.package-data]
lung_nematic = ["data/*.json"]
simulations = ["configs/*.json"]


[tool.ruff]
# The simulation modules use compact `a = 0; b = 0` initialisers deliberately;
# E702 is a style preference, not a correctness issue, so it is not enforced.
lint.ignore = ["E702"]
lint.exclude = ["*.ipynb"]
